manifest/sash-workloads.yaml
##################################################################################################
# SashQuarkus service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: quarkus
  labels:
    app: quarkus
    service: quarkus
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: quarkus
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-v1
  labels:
    app: quarkus
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus
      version: v1
  template:
    metadata:
      labels:
        app: quarkus
        version: v1
    spec:
      serviceAccountName: quarkus-sa
      containers:
      - name: quarkus
        image: gcr.io/sash-poc/sash-quarkus:1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: wlp-output
          mountPath: /opt/ibm/wlp/output
      volumes:
      - name: wlp-output
        emptyDir: {}
      - name: tmp
        emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-v2
  labels:
    app: quarkus
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus
      version: v2
  template:
    metadata:
      labels:
        app: quarkus
        version: v2
    spec:
      serviceAccountName: quarkus-sa
      containers:
      - name: quarkus
        image: gcr.io/sash-poc/sash-quarkus:2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: wlp-output
          mountPath: /opt/ibm/wlp/output
      volumes:
      - name: wlp-output
        emptyDir: {}
      - name: tmp
        emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-v3
  labels:
    app: quarkus
    version: v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus
      version: v3
  template:
    metadata:
      labels:
        app: quarkus
        version: v3
    spec:
      serviceAccountName: quarkus-sa
      containers:
      - name: quarkus
        image: gcr.io/sash-poc/sash-quarkus:3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: wlp-output
          mountPath: /opt/ibm/wlp/output
      volumes:
      - name: wlp-output
        emptyDir: {}
      - name: tmp
        emptyDir: {}
---
