manifest/sash-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sashquarkus-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sashquarkus-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - sashquarkus-gateway
  http:
  - match:
    - uri:
        exact: /home
    - uri:
        prefix: /hello
    route:
    - destination:
        host: quarkus
        port:
          number: 8080
